Bug 258199 - When system goes to standby/hibernate, audio notification is no longer played
Summary: When system goes to standby/hibernate, audio notification is no longer played
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-28 17:16 UTC by Andreas Kuhl
Modified: 2010-12-08 23:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the action setting that should play a sound (62.00 KB, image/png)
2010-12-05 18:28 UTC, Andreas Kuhl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kuhl 2010-11-28 17:16:25 UTC
Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

I added an audio notification for power management standby action. In KDE 4.5, the sound was played when my laptop went to standby. In KDE 4.6 Beta 1, the system remains silent before going to standy.

Other power management action sounds (plug, unplug) work fine though.

Reproducible: Always
Comment 1 Dario Freddi 2010-11-28 19:02:56 UTC
Are you sure about that? In 4.5, you were able to configure notifications for suspend actions which took some time before taking place (this has been removed in 4.6), but there were no notification upon a suspend job. Can you please clarify and tell me exactly which notification you are missing?
Comment 2 Andreas Kuhl 2010-11-28 21:08:31 UTC
Yes, I mean the notifications for suspend actions, sorry for the confusion. They were working in 4.5 but no longer in 4.6.
Comment 3 Dario Freddi 2010-12-04 19:08:04 UTC
In this case, there was not such a notification in 4.5: you are probably talking about the screen locking notification, which indirectly was triggered everytime the PC suspended. So probably the lock screen notification is no longer played?
Comment 4 Andreas Kuhl 2010-12-05 18:27:59 UTC
No, I just checked the notofication settings and I am 100% sure that the action  "Performing a suspension job" was triggered in 4.5. Shouldn't it be triggered in KDE SC 4.6, too, when going to "standby"?
Comment 5 Andreas Kuhl 2010-12-05 18:28:48 UTC
Created attachment 54171 [details]
Screenshot of the action setting that should play a sound
Comment 6 Dario Freddi 2010-12-08 23:54:19 UTC
SVN commit 1204752 by dafre:

BUG: 258199

Bring back the notification from 4.5

 M  +2 -0      suspendsession.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1204752