BUG: 258199

Bring back the notification from 4.5

svn path=/trunk/KDE/kdebase/workspace/; revision=1204752